<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idContainer"
    android:layout_width="fill_parent"

    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewForThread"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="424dp"
        android:text="@string/textViewForThread"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //Section 1 Linear layout


    <TextView
        android:id="@+id/textViewSelectPasswordCount1"
        android:layout_width="391dp"
        android:layout_height="29dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="74dp"
        android:layout_marginBottom="380dp"
        android:text="@string/textViewSelectPasswordCount1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewSelectPasswordCountSeekbarValue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        app:layout_constraintEnd_toEndOf="@+id/seekBarSelectPasswordCount1"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectPasswordCount1" />


    <SeekBar
        android:id="@+id/seekBarSelectPasswordCount1"
        android:layout_width="320dp"
        android:layout_height="21dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="367dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    //Section 2 Linear layout


    <TextView
        android:id="@+id/textViewSelectPasswordLength1"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="320dp"
        android:text="@string/textViewSelectPasswordLength1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewSelectPasswordLengthSeekbarValue1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSelectPasswordLength1"
        app:layout_constraintEnd_toEndOf="@+id/textViewSelectPasswordLengthSeekbarValue2"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectPasswordLengthSeekbarValue2" />


    <SeekBar
        android:id="@+id/seekBarSelectPasswordLength1"
        android:layout_width="332dp"
        android:layout_height="40dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="283dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="410dp"
        android:layout_height="23dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="273dp"
        android:max="10"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //For Async Task

    <TextView
        android:id="@+id/textViewForAsyncTask"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="206dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="246dp"
        android:text="@string/textViewForAsyncTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //Section 1 Linear layout


    <TextView
        android:id="@+id/textViewSelectPasswordCount2"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="245dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="196dp"
        android:text="@string/textViewSelectPasswordCount2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSelectPasswordCountSeekbarValue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSelectPasswordCount2"
        app:layout_constraintEnd_toEndOf="@+id/seekBarSelectPasswordCount2" />


    <SeekBar
        android:id="@+id/seekBarSelectPasswordCount2"
        android:layout_width="340dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    //Section 2 Linear layout


    <TextView
        android:id="@+id/textViewSelectPasswordLength2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="306dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="143dp"
        android:text="@string/textViewSelectPasswordLength2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewSelectPasswordLengthSeekbarValue2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBarSelectPasswordLength2"
        app:layout_constraintEnd_toEndOf="@+id/seekBarSelectPasswordLength2"
        app:layout_constraintStart_toEndOf="@+id/textViewSelectPasswordLength2" />


    <SeekBar
        android:id="@+id/seekBarSelectPasswordLength2"
        android:layout_width="341dp"
        android:layout_height="33dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="99dp"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="378dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buttonGenerate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
